--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,54 @@ services:
     networks:
       - go-down-network
 
+  # =============================================================================
+  # Monitoring (Dev only)
+  # =============================================================================
+  prometheus-dev:
+    profiles: ["dev"]
+    container_name: go-down-prometheus-dev
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/prometheus/alerts.yml:/etc/prometheus/alerts.yml
+      - prometheus-data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--web.enable-lifecycle"
+    networks:
+      - go-down-network
+    depends_on:
+      - api-gateway-dev
+      - order-service-dev
+      - payment-service-dev
+
+  grafana-dev:
+    profiles: ["dev"]
+    container_name: go-down-grafana-dev
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - grafana-data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    networks:
+      - go-down-network
+    depends_on:
+      - prometheus-dev
+
+volumes:
+  prometheus-data:
+  grafana-data:
+
 networks:
   go-down-network:
     driver: bridge
